# Prog05

./: Report.odt  main.cpp
Programs/Version1/: CMakeLists.txt  main.cpp
Programs/Version1/Documentation/html/: dir_74389ed8173ad57b461b9d623a1f3867.html  graph_legend.html  index.html
Programs/Version1/Documentation/latex/: refman.tex
Programs/Version2/: CMakeLists.txt  main.cpp
Programs/Version2/Documentation/html/: dir_74389ed8173ad57b461b9d623a1f3867.html  graph_legend.html  index.html
Programs/Version2/Documentation/latex/: refman.tex
Programs/Version2/Headers/: file_ops.h
Programs/Version3/: CMakeLists.txt  distributor.cpp  main.cpp  processor.cpp
Programs/Version3/Documentation/html/: dir_74389ed8173ad57b461b9d623a1f3867.html  graph_legend.html  index.html
Programs/Version3/Documentation/latex/: refman.tex
Programs/Version3/Source/: file_ops.cpp
Programs/Version4/: CMakeLists.txt  distributor.cpp  main.cpp  processor.cpp
Programs/Version4/Documentation/html/: dir_74389ed8173ad57b461b9d623a1f3867.html  graph_legend.html  index.html
Programs/Version4/Headers/: line_sort.h
Programs/Version4/Source/: line_sort.cpp
Programs/Version5/: distributor.cpp  main.cpp  processor.cpp
Scripts/: build.sh  eolFix.sh  script01.sh  script02.sh  script03.sh  script04.sh  script05.sh
